--- a/08-projects.Rmd
+++ b/08-projects.Rmd
@@ -1,5 +1,7 @@
 # Projects
 
+This chapter contains several empirical projects. 
+
 ## Opportunity Atlas {#opp-atlas}
 
 In this empirical project you will have a close look at what is commonly known as *the American Dream* - the idea that in a society with few barriers, everybody can achieve upward social mobility and be better off than their parents, if only they work hard enough.^[This project is a slightly modified version of the exercise designed by Raj Chetty and Gregory Bruich, available [online here](https://opportunityinsights.org/course/). Permission was granted to reuse their exercise.] 
@@ -22,13 +24,13 @@ In order to achieve those goals, you will interact with the Atlas website at [ht
 
 ### Questions
 
-```{r setup, include=FALSE}
+```{r projects-setup, include=FALSE}
 library(knitr)
 library(dplyr)
 library(Hmisc)
 library(ggplot2)
 
-showsols <- T
+showsols <- F
 ```
 
 1. Referring to the [NYT article](https://www.nytimes.com/2018/10/01/upshot/maps-neighborhoods-shape-child-poverty.html):
@@ -317,6 +319,10 @@ count_natam | Count of Native American children | 72,451
 
 
 
+
+## Trade Exercise
+
+* [Trade exercise](images/trade.html)
 
 
 
